--- a/obs-studio-xnqs-git/PKGBUILD
+++ b/obs-studio-xnqs-git/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=obs-studio-xnqs-git
-pkgver=28.0.1.109
+pkgver=28.1.0.beta1
 pkgrel=1
 pkgdesc="OBS Studio master release - patched with obs-kmsgrab fixes."
 arch=("i686" "x86_64")
@@ -35,6 +35,7 @@ source=("$pkgname::git+https://github.com/obsproject/obs-studio.git#branch=maste
         "git+https://github.com/zaphoyd/websocketpp.git"
         "fix_python_binary_loading.patch"
         "0000-obs-kmsgrab-fix.patch")
+
 md5sums=("SKIP" "SKIP" "SKIP" "SKIP" "SKIP" "SKIP" "SKIP" "SKIP" "SKIP"
          "051b90f05e26bff99236b8fb1ad377d1"
          "a1a5fcc7c30ff0447ccda257bde05609")
@@ -46,20 +47,19 @@ pkgver() {
 
 prepare() {
   cd $pkgname
-  patch -u libobs/obs-module.c -i "$srcdir"/0000-obs-kmsgrab-fix.patch
   patch -Np1 < "$srcdir"/fix_python_binary_loading.patch
   git config submodule.plugins/obs-outputs/ftl-sdk.url $srcdir/ftl-sdk
   git config submodule.plugins/obs-browser.url $srcdir/obs-browser
   git config submodule.plugins/obs-vst.url $srcdir/obs-vst
   git config submodule.plugins/obs-websocket.url $srcdir/obs-websocket
-  git submodule update
+  git submodule--helper update
 
   cd plugins/obs-websocket
   git config submodule.deps/asio.url $srcdir/asio
   git config submodule.deps/json.url $srcdir/json
   git config submodule.deps/qr.url $srcdir/QR-Code-generator
   git config submodule.deps/websocketpp.url $srcdir/websocketpp
-  git submodule update
+  git submodule--helper update
 }
 
 build() {
@@ -72,7 +72,7 @@ build() {
     -DCMAKE_INSTALL_LIBDIR=lib \
     -DBUILD_BROWSER=ON \
     -DCEF_ROOT_DIR="/opt/cef-obs" \
-    -DOBS_VERSION_OVERRIDE=$pkgver ..
+    -DOBS_VERSION_OVERRIDE=$(echo -n "$pkgver" | cut -d. -f1-4 | sed 's/beta//') ..
 
   make
 }
